--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,17 +1,18 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="appbar_padding">16dp</dimen>
-    <dimen name="fab_margin">16dp</dimen>
-    <dimen name="appbar_padding_top">8dp</dimen>
-    <dimen name="appbar_height">112dp</dimen>
-    <dimen name="bottom_appbar_height">70dp</dimen>
-    <dimen name="padding_container">15dp</dimen>
+    <!--<dimen name="activity_horizontal_margin">16dp</dimen>-->
+    <!--<dimen name="activity_vertical_margin">16dp</dimen>-->
+    <!--<dimen name="appbar_padding">16dp</dimen>-->
+    <!--<dimen name="fab_margin">16dp</dimen>-->
+    <!--<dimen name="appbar_padding_top">8dp</dimen>-->
+    <!--<dimen name="appbar_height">112dp</dimen>-->
 
-    <dimen name="text_size_small">14sp</dimen>
-    <dimen name="text_size_large">20sp</dimen>
+    <dimen name="padding_container">16dp</dimen>
+    <dimen name="size_text_small">14sp</dimen>
     <dimen name="radius_bottom_appbar">25dp</dimen>
-    <dimen name="margin_now_playing_controls">25dp</dimen>
     <dimen name="padding_now_playing_text">10dp</dimen>
+	<dimen name="size_icon_now_playing">50dp</dimen>
+    <dimen name="margin_fab">16dp</dimen>
+    <dimen name="padding_seek_bar_now_playing">25dp</dimen>
+    <dimen name="padding_container_controls_now_playing">20dp</dimen>
 </resources>
