--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,82 +3,28 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
-	android:id="@+id/main_layout"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	android:fitsSystemWindows="true"
-	android:gravity="center_horizontal"
-	android:orientation="vertical"
 	tools:context=".ui.main.MainActivity">
 
-	<com.google.android.material.appbar.AppBarLayout
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:theme="@style/AppTheme.AppBarOverlay">
+	<!--<com.google.android.material.appbar.AppBarLayout-->
+	<!--	android:layout_width="match_parent"-->
+	<!--	android:layout_height="wrap_content">-->
 
-		<androidx.appcompat.widget.Toolbar
-			android:id="@+id/main_toolbar"
-			android:layout_width="match_parent"
-			android:layout_height="?attr/actionBarSize"
-			app:layout_scrollFlags="scroll|enterAlways"
-			app:popupTheme="@style/AppTheme.PopupOverlay" />
+	<!--	<androidx.appcompat.widget.Toolbar-->
+	<!--		android:id="@+id/main_toolbar"-->
+	<!--		android:layout_width="match_parent"-->
+	<!--		android:layout_height="?attr/actionBarSize"-->
+	<!--		app:layout_scrollFlags="scroll|snap|enterAlways"-->
+	<!--		app:popupTheme="@style/AppTheme.PopupOverlay" />-->
+	<!--</com.google.android.material.appbar.AppBarLayout>-->
 
-		<com.google.android.material.tabs.TabLayout
-			android:id="@+id/main_tabs"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			app:layout_collapseMode="pin"
-			app:tabGravity="fill"
-			app:tabMode="fixed" />
-	</com.google.android.material.appbar.AppBarLayout>
-
-	<!--set padding to viewpager on runtime-->
-	<androidx.viewpager.widget.ViewPager
-		android:id="@+id/main_view_pager"
+	<!--does not work with scroll view behaviour-->
+	<fragment
+		android:id="@+id/main_nav_host_fragment"
+		android:name="androidx.navigation.fragment.NavHostFragment"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
-
-	<LinearLayout
-		android:id="@+id/main_bottom_appbar"
-		android:layout_width="match_parent"
-		android:layout_height="?attr/actionBarSize"
-		android:layout_gravity="bottom"
-		android:background="@drawable/bottom_bar_bg"
-		android:gravity="center_horizontal"
-		android:visibility="invisible">
-
-		<TextView
-			android:id="@+id/main_bottom_appbar_song_title"
-			android:layout_width="0dp"
-			android:layout_height="match_parent"
-			android:layout_weight="1"
-			android:ellipsize="marquee"
-			android:fadingEdge="horizontal"
-			android:gravity="center"
-
-			android:marqueeRepeatLimit="marquee_forever"
-			android:onClick="onClick"
-			android:paddingStart="5dp"
-			android:scrollHorizontally="true"
-			android:singleLine="true" />
-
-		<ImageButton
-			android:id="@+id/main_bottom_appbar_btn_previous"
-			android:layout_width="50dp"
-			android:layout_height="match_parent"
-			android:src="@drawable/ic_skip_previous" />
-
-		<ImageButton
-			android:id="@+id/main_bottom_appbar_btn_play"
-			android:layout_width="50dp"
-			android:layout_height="match_parent"
-			android:src="@drawable/ic_play_arrow" />
-
-		<ImageButton
-			android:id="@+id/main_bottom_appbar_btn_next"
-			android:layout_width="50dp"
-			android:layout_height="match_parent"
-			android:src="@drawable/ic_skip_next" />
-	</LinearLayout>
+		app:defaultNavHost="true"
+		app:navGraph="@navigation/navigation_main" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
