refactored ui to dagger 2

--- a/app/src/main/res/navigation/navigation_main.xml
+++ b/app/src/main/res/navigation/navigation_main.xml
@@ -8,7 +8,7 @@
 
 	<fragment
 		android:id="@+id/main_home_fragment"
-		android:name="com.muiz6.musicplayer.ui.main.home.MainFragment"
+		android:name="com.muiz6.musicplayer.ui.main.home.HomeFragment"
 		android:label="@string/app_name"
 		tools:layout="@layout/fragment_main">
 		<action
