--- a/app/src/main/res/navigation/navigation_main.xml
+++ b/app/src/main/res/navigation/navigation_main.xml
@@ -10,7 +10,7 @@
 		android:id="@+id/main_home_fragment"
 		android:name="com.muiz6.musicplayer.ui.main.home.HomeFragment"
 		android:label="@string/app_name"
-		tools:layout="@layout/fragment_main">
+		tools:layout="@layout/fragment_home">
 		<action
 			android:id="@+id/action_main_home_to_player"
 			app:destination="@id/main_player_fragment" />
