created basic ui for album, artist, and genre tabs

--- a/app/src/main/res/layout/fragment_grid.xml
+++ b/app/src/main/res/layout/fragment_grid.xml
@@ -7,4 +7,4 @@
 	android:clipToPadding="false"
 	android:nestedScrollingEnabled="true"
 	android:scrollbars="vertical"
-	app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+	app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />
