--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -47,7 +47,7 @@
 		android:layout_width="match_parent"
 		android:layout_height="?attr/actionBarSize"
 		android:layout_gravity="bottom"
-		android:background="@drawable/bottom_bar_bg"
+		android:background="@drawable/bg_bottom_bar"
 		android:visibility="gone"
 		app:layout_insetEdge="bottom">
 
