--- a/app/src/main/res/drawable/bg_item_album_description.xml
+++ b/app/src/main/res/drawable/bg_item_album_description.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape
 	xmlns:android="http://schemas.android.com/apk/res/android">
-	<solid android:color="@color/colorGrey" />
+	<solid android:color="?attr/colorSurface" />
 
 	<corners
-		android:bottomLeftRadius="@dimen/radius_bottom_appbar"
-		android:bottomRightRadius="@dimen/radius_bottom_appbar" />
+		android:bottomLeftRadius="@dimen/radius_l"
+		android:bottomRightRadius="@dimen/radius_l" />
 </shape>
