replaced tabs with material tabs

--- a/app/src/main/res/drawable/thumb_scrollbar.xml
+++ b/app/src/main/res/drawable/thumb_scrollbar.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
+	<item android:state_pressed="true">
+		<shape>
+			<solid android:color="@color/colorYellow500" />
+			<size android:width="5dp" />
+			<corners android:bottomLeftRadius="3dp"
+				android:topLeftRadius="3dp" />
+		</shape>
+	</item>
+
 	<item>
 		<shape>
-			<solid android:color="?attr/colorAccent" />
+			<solid android:color="?attr/colorSecondary" />
 			<size android:width="5dp" />
 			<corners android:bottomLeftRadius="3dp"
 				android:topLeftRadius="3dp" />
