--- a/app/src/main/res/drawable/bg_list_item_drawable.xml
+++ b/app/src/main/res/drawable/bg_list_item_drawable.xml
@@ -2,8 +2,5 @@
 <shape
 	xmlns:android="http://schemas.android.com/apk/res/android">
 	<solid android:color="?attr/colorSurface" />
-
-	<corners
-		android:bottomLeftRadius="@dimen/radius_l"
-		android:bottomRightRadius="@dimen/radius_l" />
+	<corners android:radius="@dimen/radius_l" />
 </shape>
