--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--need to specify coordinator layout id to preserve toolbar state on config changes-->
 <androidx.coordinatorlayout.widget.CoordinatorLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
@@ -12,7 +13,7 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content">
 
-		<androidx.appcompat.widget.Toolbar
+		<com.google.android.material.appbar.MaterialToolbar
 			android:id="@+id/main_toolbar"
 			android:layout_width="match_parent"
 			android:layout_height="?attr/actionBarSize"
@@ -23,7 +24,6 @@
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			app:tabGravity="fill"
-			app:tabIconTint="?android:attr/textColorSecondary"
 			app:tabMode="fixed" />
 	</com.google.android.material.appbar.AppBarLayout>
 
