--- a/app/src/main/res/layout/item_album.xml
+++ b/app/src/main/res/layout/item_album.xml
@@ -3,7 +3,9 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
-	android:orientation="vertical">
+	android:orientation="vertical"
+	android:background="@drawable/bg_item"
+	android:layout_margin="@dimen/margin_s">
 
 	<androidx.appcompat.widget.AppCompatImageView
 		android:id="@+id/item_album_drawable"
@@ -15,7 +17,6 @@
 	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:background="@drawable/bg_item_album_description"
 		android:orientation="vertical"
 		android:padding="@dimen/padding_container">
 
